# libsearpc

./: CMakeLists.txt  libsearpc.pc.in
demo/: CMakeLists.txt
lib/: CMakeLists.txt
pysearpc/: CMakeLists.txt
tests/: CMakeLists.txt
